--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Build
         run: hugo --minify
 
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
